--- a/front-end/src/pages/Profile.css
+++ b/front-end/src/pages/Profile.css
@@ -161,6 +161,7 @@
 #profile-show-container {
   display: flex;
   flex-wrap: wrap;
+   justify-content: space-around;
 }
 
 @media screen and (max-width: 2400px) {
